syntax = "proto3";

package v2ray.core.app.stats;
option csharp_namespace = "V2Ray.Core.App.Stats";
option go_package = "github.com/ghxhy/v2ray-core/v5/app/stats";
option java_package = "com.v2ray.core.app.stats";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "service";
  option (v2ray.core.common.protoext.message_opt).short_name = "stats";
}

message ChannelConfig {
  bool Blocking = 1;
  int32 SubscriberLimit = 2;
  int32 BufferSize = 3;
}
